Updated docker compose

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "lencse/work-calendar-api",
-    "description": "Work Calendar API",
+    "description": "Work Calendar HU API",
     "keywords": [],
     "homepage": "https://api.work-calendar.hu",
     "license": "MIT",
