--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,43 +3,37 @@ jobs:
     test:
         docker:
             - image: circleci/php:7.2.1-browsers
-
         working_directory: ~/repo
-
         steps:
             - checkout
-
             - restore_cache:
                 keys:
                 - v1-dependencies-{{ checksum "composer.json" }}
                 - v1-dependencies-
-
             - run: composer install -n --prefer-dist
-
             - save_cache:
                   paths:
                       - ./vendor
                   key: v1-dependencies-{{ checksum "composer.json" }}
-
             - run: composer test
     build:
         docker:
             - image: circleci/php:7.2.1-browsers
-
         working_directory: ~/repo
-
         steps:
             - checkout
-
             - restore_cache:
                 keys:
                 - v1-dependencies-{{ checksum "composer.json" }}
                 - v1-dependencies-
-
             - run: composer install -n --prefer-dist --no-dev
-
             - save_cache:
                   paths:
                       - ./vendor
                   key: v1-dependencies-{{ checksum "composer.json" }}
-
+workflows:
+    version: 2
+    build_and_test:
+        jobs:
+            - build
+            - test
