--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,11 @@ jobs:
                 paths:
                     - ./vendor
                 key: v1-dependencies-{{ checksum "composer.json" }}
+            - run:
+                name: Create artifacts file
+                command: tar --exclude='*.tgz' --exclude='./.git' -zvcf $CIRCLE_SHA1.tgz .
             - store_artifacts:
-                path: .
+                path: $CIRCLE_SHA1.tgz
     deploy:
         docker:
             - image: circleci/php:7.2.1-browsers
