--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "monolog/monolog": "^1.17"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": "^6.5",
+        "phpmd/phpmd": "^2.6",
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
         "psr-4": {
@@ -35,6 +37,8 @@
     },
     "scripts": {
         "start": "php -S localhost:8220 public/index.php",
-        "test": "phpunit"
+        "test": "phpunit",
+        "md": "phpmd src/ text phpmd.xml && phpmd test/ text phpmd.xml",
+        "cs": "phpcs --standard=PSR2 src test"
     }
 }
