--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require-dev": {
         "phpunit/phpunit": "^6.5",
         "phpmd/phpmd": "^2.6",
-        "squizlabs/php_codesniffer": "^3.2"
+        "squizlabs/php_codesniffer": "^3.2",
+        "lencse/ci-tools": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -38,7 +39,10 @@
     "scripts": {
         "start": "php -S localhost:8220 public/index.php",
         "test": "phpunit",
+        "test-coverage": "phpunit --coverage-html logs/coverage-report --coverage-clover logs/clover.xml",
+        "min-coverage": "ci-test-coverage --min-coverage 99 --clover-file logs/clover.xml",
         "md": "phpmd src/ text phpmd.xml && phpmd test/ text phpmd.xml",
-        "cs": "phpcs --standard=PSR2 src test"
+        "cs": "phpcs --standard=PSR2 src test",
+        "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs"
     }
 }
