--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
     build:
         docker:
-            - image: circleci/php:7.2.1-browsers
+            - image: circleci/php:7.2-cli-node-browsers
         working_directory: ~/repo
         steps:
             - checkout
