--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
-        "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "php": ">=7.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
