--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "phpunit/phpunit": "^6.5",
         "phpmd/phpmd": "^2.6",
         "squizlabs/php_codesniffer": "^3.2",
-        "lencse/ci-tools": "^3.0"
+        "lencse/ci-tools": "^3.0",
+        "phploc/phploc": "^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -41,6 +42,7 @@
         "min-coverage": "ci-test-coverage --min-coverage 99 --clover-file logs/clover.xml",
         "md": "phpmd src/ text phpmd.xml && phpmd test/ text phpmd.xml",
         "cs": "phpcs --standard=PSR2 src test",
-        "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs"
+        "loc": "phploc src",
+        "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs && composer loc"
     }
 }
