--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "psr-4": {
             "Lencse\\WorkCalendar\\Calendar\\": "src/Lencse/WorkCalendar/Calendar/",
             "Lencse\\WorkCalendar\\Hu\\": "src/Lencse/WorkCalendar/Hu/",
-            "Lencse\\Date\\": "src/Lencse/Date/"
+            "Lencse\\Date\\": "src/Lencse/Date/",
+            "Lencse\\Application\\": "src/Lencse/Application/"
         }
     },
     "autoload-dev": {
