--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0"
+        "php": ">=7.1.0",
+        "rdlowrey/auryn": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
