--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": ">=7.1.0",
         "rdlowrey/auryn": "^1.4",
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "guzzlehttp/psr7": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
