--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=7.1.0",
         "rdlowrey/auryn": "^1.4",
         "guzzlehttp/psr7": "^1.4",
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "neomerx/json-api": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
