--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -4,7 +4,7 @@ location / {
 }
 
 location @rewriteapp {
-    # rewrite all to app.php
+    # rewrite all to index.php
     rewrite ^(.*)$ /index.php/$1 last;
 }
 
