--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,14 +1,1 @@
-location / {
-    # try to serve file directly, fallback to rewrite
-    try_files $uri @rewriteapp;
-}
-
-location @rewriteapp {
-    # rewrite all to index.php
-    rewrite ^(.*)$ /index.php/$1 last;
-}
-
-location ~ ^/(app|app_dev|config|index)\.php(/|$) {
-    try_files @heroku-fcgi @heroku-fcgi;
-    internal;
-}
+rewrite ^/(.*)$ /index.php/$1 last;
