--- a/nginx_app.conf
+++ b/nginx_app.conf
@@ -1,14 +1,28 @@
-location / {
-    # try to serve file directly, fallback to rewrite
-    try_files $uri @rewriteapp;
-}
+server {
 
-location @rewriteapp {
-    # rewrite all to index.php
-    rewrite ^(.*)$ /index.php/$1 last;
-}
+    root /app/public;
 
-location ~ ^/(app|app_dev|config|index)\.php(/|$) {
-    try_files @heroku-fcgi @heroku-fcgi;
-    internal;
+    location / {
+        # try to serve file directly, fallback to index.php
+        try_files $uri /index.php$is_args$args;
+    }
+
+    # PROD
+    location ~ ^/index\.php(/|$) {
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        # When you are using symlinks to link the document root to the
+        # current version of your application, you should pass the real
+        # application path instead of the path to the symlink to PHP
+        # FPM.
+        # Otherwise, PHP's OPcache may not properly detect changes to
+        # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
+        # for more information).
+        fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        # Prevents URIs that include the front controller. This will 404:
+        # http://symfony3.dev/app.php/some-path
+        # Remove the internal directive to allow URIs like this
+        internal;
+    }
 }
