--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
         working_directory: ~/repo
         steps:
             - checkout
-            - add_ssh_keys:  # add key from CircleCI account based on fingerprint
+            - add_ssh_keys:
                 fingerprints:
                      - "f2:40:52:df:7e:e6:b3:4d:18:55:4f:29:04:0b:59:6c"
             - run:
@@ -36,8 +36,8 @@ jobs:
             - run:
                 name: Deploy to Heroku Staging Server
                 command: |
-                    heroku git:remote -a HEROKU_APP_NAME_STAGING
-                    git push --force git@heroku.com:$HEROKU_APP_NAME.git HEAD:refs/heads/master
+                    heroku git:remote -a $HEROKU_APP_NAME_STAGING
+                    git push --force git@heroku.com:$HEROKU_APP_NAME_STAGING.git HEAD:refs/heads/master
 workflows:
     version: 2
     standard:
