--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "squizlabs/php_codesniffer": "^3.2",
         "lencse/ci-tools": "^3.0",
         "phploc/phploc": "^4.0",
-        "vimeo/psalm": "^1.0"
+        "vimeo/psalm": "^1.0",
+        "phpbench/phpbench": "^0.14.0"
     },
     "autoload": {
         "psr-4": {
