--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "cs": "phpcs --standard=PSR2 src test",
         "loc": "phploc --count-tests -vvv src test",
         "psalm": "psalm",
-        "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs && composer psalm && composer loc"
+        "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs && composer psalm && composer loc",
+        "benchmark": "phpbench run  --revs=100 --iterations=5 --report=default"
     }
 }
