--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "lencse/ci-tools": "^3.0",
         "phploc/phploc": "^4.0",
         "vimeo/psalm": "^1.0",
-        "phpbench/phpbench": "^0.14.0"
+        "phpbench/phpbench": "^0.14.0",
+        "brunty/cigar": "^1.8"
     },
     "autoload": {
         "psr-4": {
@@ -54,6 +55,7 @@
         "loc": "phploc --count-tests -vvv src test",
         "psalm": "psalm",
         "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs && composer psalm && composer loc",
-        "benchmark": "phpbench run  --revs=100 --iterations=5 --report=default"
+        "benchmark": "phpbench run  --revs=100 --iterations=5 --report=default",
+        "cigar-local": "cigar --url=http://localhost:8220"
     }
 }
