--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,14 @@ jobs:
                 command: |
                     heroku git:remote -a $HEROKU_APP_NAME_STAGING
                     git push --force git@heroku.com:$HEROKU_APP_NAME_STAGING.git HEAD:refs/heads/master
-            - run
+            - restore_cache:
+                keys:
+                - v1-dependencies-{{ checksum "composer.json" }}
+                - v1-dependencies-
+            - run:
+                name: Composer Install
+                command: composer install -n --prefer-dist
+            - run:
                 name: Smoke Test
                 command: |
                     composer install
