--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
         "loc": "phploc --count-tests -vvv src test",
         "psalm": "psalm",
         "test-all": "composer test-coverage && composer min-coverage && composer md && composer cs && composer psalm && composer loc",
-        "benchmark": "phpbench run  --revs=1000 --iterations=5 --report=default",
+        "benchmark": "phpbench run  --revs=100 --iterations=5 --report=default",
+        "benchmark-trace": "phpbench xdebug:trace --extension=\"PhpBench\\Extensions\\XDebug\\XDebugExtension\"",
         "cigar-local": "cigar --url=http://localhost:8220"
     }
 }
