Fixed Circle CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ workflows:
             - deploy-to-prod:
                 type: approval
                 requires:
-                    - build
+                    - deploy-to-staging
             - benchmark:
                 requires:
                     - build
