--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,10 +104,13 @@ workflows:
             - deploy-to-staging:
                 requires:
                     - build
-            - deploy-to-prod:
+            - deploy-to-prod-approval:
                 type: approval
                 requires:
                     - deploy-to-staging
+            - deploy-to-prod:
+                requires:
+                    - deploy-to-prod-approval
             - benchmark:
                 requires:
                     - build
