--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,17 +83,23 @@ jobs:
                 command:
                     bash .circleci/setup-heroku.sh
             - run:
-                name: List files
+                name: List files 1
                 command: find .
             - run:
                 name: Deploy to Heroku Production Server
                 command: |
                     heroku git:remote -a $HEROKU_APP_NAME_PROD
                     git push --force git@heroku.com:$HEROKU_APP_NAME_PROD.git HEAD:refs/heads/master
+            - run:
+                name: List files 2
+                command: find .
             - restore_cache:
                 keys:
                 - v1-dependencies-{{ checksum "composer.json" }}
                 - v1-dependencies-
+            - run:
+                name: List files 3
+                command: find .
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
