--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "rdlowrey/auryn": "^1.4",
         "guzzlehttp/psr7": "^1.4",
         "nikic/fast-route": "^1.3",
-        "neomerx/json-api": "^2.0"
+        "neomerx/json-api": "^2.0",
+        "sentry/sentry": "^1.8",
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
