--- a/composer.json
+++ b/composer.json
@@ -48,10 +48,11 @@
         "process-timeout" : 0
     },
     "scripts": {
+        "setup-dotenv": "cp .env.example .env",
         "start": "php -S localhost:8220 public/index.php",
         "test": "phpunit",
         "test-coverage": "phpunit --coverage-html logs/coverage-report --coverage-clover logs/clover.xml",
-        "min-coverage": "ci-test-coverage --min-coverage 99 --clover-file logs/clover.xml",
+        "min-coverage": "ci-test-coverage --min-coverage 95 --clover-file logs/clover.xml",
         "md": "phpmd src/ text phpmd.xml && phpmd test/ text phpmd.xml",
         "cs": "phpcs --standard=PSR2 src test",
         "loc": "phploc --count-tests -vvv src test",
