--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,19 @@
-version: 2
-jobs:
-    build:
+_:
+    _: &CONFIG
         docker:
             - image: circleci/php:7.2-browsers
         working_directory: ~/repo
+
+version: 2
+jobs:
+    build:
+        <<: *CONFIG
         steps:
             - checkout
             - restore_cache:
                 keys:
-                - v1-dependencies-{{ checksum "composer.json" }}
-                - v1-dependencies-
+                    - v1-dependencies-{{ checksum "composer.json" }}
+                    - v1-dependencies-
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
@@ -24,15 +28,13 @@ jobs:
                 name: Local Smoke Test
                 command: ./smoke-test.sh
     benchmark:
-        docker:
-            - image: circleci/php:7.2-browsers
-        working_directory: ~/repo
+        <<: *CONFIG
         steps:
             - checkout
             - restore_cache:
                 keys:
-                - v1-dependencies-{{ checksum "composer.json" }}
-                - v1-dependencies-
+                    - v1-dependencies-{{ checksum "composer.json" }}
+                    - v1-dependencies-
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
@@ -40,9 +42,7 @@ jobs:
                 name: Benchmark
                 command: composer benchmark
     deploy-to-staging:
-        docker:
-            - image: circleci/php:7.2-browsers
-        working_directory: ~/repo
+        <<: *CONFIG
         steps:
             - checkout
             - add_ssh_keys:
@@ -59,8 +59,8 @@ jobs:
                     git push --force git@heroku.com:$HEROKU_APP_NAME_STAGING.git HEAD:refs/heads/master
             - restore_cache:
                 keys:
-                - v1-dependencies-{{ checksum "composer.json" }}
-                - v1-dependencies-
+                    - v1-dependencies-{{ checksum "composer.json" }}
+                    - v1-dependencies-
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
@@ -68,9 +68,7 @@ jobs:
                 name: Smoke Test
                 command: vendor/bin/cigar --url=$APP_URL_STAGING
     deploy-to-prod:
-        docker:
-            - image: circleci/php:7.2-browsers
-        working_directory: ~/repo
+        <<: *CONFIG
         steps:
             - checkout
             - add_ssh_keys:
@@ -87,8 +85,8 @@ jobs:
                     git push --force git@heroku.com:$HEROKU_APP_NAME_PROD.git HEAD:refs/heads/master
             - restore_cache:
                 keys:
-                - v1-dependencies-{{ checksum "composer.json" }}
-                - v1-dependencies-
+                    - v1-dependencies-{{ checksum "composer.json" }}
+                    - v1-dependencies-
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
