--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,11 @@ _:
         docker:
             - image: circleci/php:7.2-browsers
         working_directory: ~/repo
+    _: &RESTORE_CACHE
+        - restore_cache:
+            keys:
+                - v1-dependencies-{{ checksum "composer.json" }}
+                - v1-dependencies-
 
 version: 2
 jobs:
@@ -10,10 +15,7 @@ jobs:
         <<: *CONFIG
         steps:
             - checkout
-            - restore_cache:
-                keys:
-                    - v1-dependencies-{{ checksum "composer.json" }}
-                    - v1-dependencies-
+            - <<: *RESTORE_CACHE
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
@@ -31,10 +33,7 @@ jobs:
         <<: *CONFIG
         steps:
             - checkout
-            - restore_cache:
-                keys:
-                    - v1-dependencies-{{ checksum "composer.json" }}
-                    - v1-dependencies-
+            - <<: *RESTORE_CACHE
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
@@ -57,10 +56,7 @@ jobs:
                 command: |
                     heroku git:remote -a $HEROKU_APP_NAME_STAGING
                     git push --force git@heroku.com:$HEROKU_APP_NAME_STAGING.git HEAD:refs/heads/master
-            - restore_cache:
-                keys:
-                    - v1-dependencies-{{ checksum "composer.json" }}
-                    - v1-dependencies-
+            - <<: *RESTORE_CACHE
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
@@ -83,10 +79,7 @@ jobs:
                 command: |
                     heroku git:remote -a $HEROKU_APP_NAME_PROD
                     git push --force git@heroku.com:$HEROKU_APP_NAME_PROD.git HEAD:refs/heads/master
-            - restore_cache:
-                keys:
-                    - v1-dependencies-{{ checksum "composer.json" }}
-                    - v1-dependencies-
+            - <<: *RESTORE_CACHE
             - run:
                 name: Composer Install
                 command: composer install -n --prefer-dist
